# flensortow

./: pyproject.toml
flensortow/: classifier.py  datasets.py  util.py  vis.py
flensortow/models/: mlp.py  perceptron.py
notebooks/: autograd.ipynb
