[tool.poetry]
name = "flensortow"
version = "0.1.0"
description = ""
authors = ["Robbie Dozier <importantigrav@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
np = "^1.0.2"
sklearn = "^0.0"
tensorflow = ">=2.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
